⚡ Hiding assistant button for custom nodes, fixing banner border in dark mode

--- a/packages/design-system/src/css/_tokens.dark.scss
+++ b/packages/design-system/src/css/_tokens.dark.scss
@@ -195,7 +195,7 @@
 	--color-notice-font: var(--prim-gray-0);
 
 	// Callout
-	--color-callout-info-border: var(--prim-gray-420);
+	--color-callout-info-border: var(--prim-gray-670);
 	--color-callout-info-background: var(--prim-gray-740);
 	--color-callout-info-font: var(--prim-gray-0);
 	--color-callout-success-border: var(--color-success);
